# tibvh

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tibvh/: __init__.py
src/tibvh/geometry/: __init__.py  aabb_generator.py  geom_intersection.py  utils.py
src/tibvh/lbvh/: __init__.py  aabb.py  lbvh.py
tests/: conftest.py  test_aabb_generator.py  test_device_selection.py  test_geom_intersection.py  test_lbvh.py
