[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tibvh"
version = "0.1.5"
description = "A high-performance Taichi-based Linear BVH implementation for 3D geometry processing"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn" },
]
maintainers = [
    { name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn" },
]
keywords = [
    "3d",
    "bvh",
    "collision-detection",
    "computer-graphics",
    "geometry",
    "ray-tracing",
    "spatial-data-structures",
    "taichi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26,<3",
    "taichi==1.7.4",
    "torch==2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pre-commit>=3.5",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.8",
]
docs = [
    "myst-parser>=0.17.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.0",
]

[project.urls]
Homepage = "https://github.com/discoverse-dev/tibvh"
Repository = "https://github.com/discoverse-dev/tibvh"
Issues = "https://github.com/discoverse-dev/tibvh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tibvh"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src",
]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
    "E741",
]

[tool.ruff.lint.isort]
known-first-party = ["tibvh"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.mypy]
mypy_path = "src"
packages = ["tibvh"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "taichi.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--verbose",
]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["tibvh"]
omit = [
    "*/test_*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    "def __repr__",
    "if 0:",
    "if __name__ == \"__main__\":",
    "if self.debug:",
    "if settings.DEBUG",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
